# brew-maintainer

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
FormulaTemplate/: brew-maintainer.rb
src/: brew_command.rs  formulae.rs  logging.rs  main.rs  maintenance_command.rs  service.rs
