[package]
name = "brew-maintainer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["now", "pure-rust-locales", "std", "clock"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[profile.release]
debug = false
strip = "symbols"
opt-level = "z"
lto = true
panic = "abort"
